Removed my prompt from the .env.example

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,4 @@ ANTHROPIC_API_KEY=your-api-key-here
 
 # Custom System Prompt (optional)
 # Customize how Claude processes your transcripts
-# SYSTEM_PROMPT=You are an expert software engineer who writes clean, production-ready code with deep knowledge of modern web technologies and blockchain development. Your task is to take my spoken transcript and transform it into clear, structured engineering requirements, code comments, or technical documentation that follows best practices for React, Node.js, TypeScript, and Web3 development.
+# SYSTEM_PROMPT=Your prompt here
